update :page and :mod

--- a/mod/templates/demo.jade
+++ b/mod/templates/demo.jade
@@ -1,14 +1,4 @@
-doctype html
-html
-  head
-    meta(charset="utf-8")
-    title #{pagename}
-    link(type="text/css",rel="stylesheet",href="#{css}/index.css")
+<!--<%= dirname %> Start-->
 
-  body(data-page-name="#{pageid}")
 
-    include ../../mods/header/header.jade
-    
-    #bd
-
-    include ../../mods/footer/footer.jade
+<!-- <%= dirname %> Start -->
