--- a/page/templates/demo.jade
+++ b/page/templates/demo.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     title #{pagename}
-    link(type="text/css",rel="stylesheet",href="#{css}/index.css")
+    link(type="text/css",rel="stylesheet",href="#{css}/<%= dirname %>.css")
 
   body(data-page-name="#{pageid}")
 
@@ -12,3 +12,5 @@ html
     #bd
 
     include ../../mods/footer/footer.jade
+
+    script(src="#{js}/<%= dirname %>.js")
