--- a/app/templates/src/mods/global/global.styl
+++ b/app/templates/src/mods/global/global.styl
@@ -1,7 +1,7 @@
 /**
- * User:louxiaojian
- * Date:2014-08-25
- * Mail:jxsr_lxj@163.com
+ * User:<%= user %>
+ * Date:<%= appbegintime %>
+ * Mail:<%= mail %>
  */
 	
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td
