--- a/app/templates/src/mods/footer/footer.styl
+++ b/app/templates/src/mods/footer/footer.styl
@@ -1,7 +1,7 @@
 /**
- * User:louxiaojian
- * Date:2014-03-25
- * Mail:louxiaojian@gmail.com
+ * User:<%= user %>
+ * Date:<%= appbegintime %>
+ * Mail:<%= mail %>
  */
  #ft
  	background #000000
