--- a/app/templates/src/mods/header/header.styl
+++ b/app/templates/src/mods/header/header.styl
@@ -1,9 +1,8 @@
 /**
- * User:louxiaojian
- * Date:2014-03-25
- * Mail:louxiaojian@gmail.com
+ * User:<%= user %>
+ * Date:<%= appbegintime %>
+ * Mail:<%= mail %>
  */
-
 #hd
 	zoom 1
 	background url(../img/header/top_nav.jpg?v=version) center no-repeat
