--- a/app/templates/src/pages/index/index.styl
+++ b/app/templates/src/pages/index/index.styl
@@ -1,7 +1,7 @@
 /**
- * User:louxiaojian
- * Date:2014-03-25
- * Mail:louxiaojian@gmail.com
+ * User:<%= user %>
+ * Date:<%= appbegintime %>
+ * Mail:<%= mail %>
  */
 @import '../../mods/global/global.styl'
 @import '../../mods/header/header.styl'
