--- a/app/templates/src/mods/global/global.styl
+++ b/app/templates/src/mods/global/global.styl
@@ -10,8 +10,8 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 body
 	font:12px/22px "\5FAE\8F6F\96C5\9ED1",Tahoma,Verdana
 	word-break break-all
-	background #0a0a0a
-	color #fff
+	background #fff
+	color #000
 
 ul,li
 	list-style:none
