--- a/app/templates/src/mods/footer/footer.styl
+++ b/app/templates/src/mods/footer/footer.styl
@@ -3,10 +3,12 @@
  * Date:<%= appbegintime %>
  * Mail:<%= mail %>
  */
- #ft
- 	background #fff
- 	color #393939
- 	font-size 14px
- 	padding 50px 0
- 	*zoom 1
- 	min-width 1002px
+#ft
+    background #f4f4f4
+    color #393939
+    font-size 32px
+    padding 50px 0
+    *zoom 1
+    min-width 1002px
+    text-align center
+    border-top 2px solid #ccc
