--- a/app/templates/src/mods/header/header.styl
+++ b/app/templates/src/mods/header/header.styl
@@ -4,12 +4,16 @@
  * Mail:<%= mail %>
  */
 #hd
-	zoom 1
-	background url(../img/header/top_nav.jpg?v=version) center no-repeat
-	margin-bottom 10px
-	min-width 1002px
-	.masthead
-		width 1002px
-		height 96px
-		overflow hidden
-		margin 0 auto
+    zoom 1
+    background #f3f3f3 url(../img/header/top_nav.jpg?v=version) center no-repeat
+    margin-bottom 10px
+    min-width 1002px
+    border-bottom 2px solid #ccc
+    .masthead
+        width 1002px
+        height 96px
+        overflow hidden
+        margin 0 auto
+        font-size 32px
+        line-height 2
+        text-align center
