--- a/app/templates/src/mods/global/global.styl
+++ b/app/templates/src/mods/global/global.styl
@@ -10,7 +10,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 body
 	font:12px/22px "\5FAE\8F6F\96C5\9ED1",Tahoma,Verdana
 	word-break break-all
-	background #fff
+	background #f6f6f6
 	color #000
 
 ul,li
@@ -90,6 +90,7 @@ fieldset{border:none}
 	width 1002px
 	margin 0 auto
 	padding-bottom 10px
+	min-height 500px
 
 .crumb
 	zoom:1;font-family:'\5B8B\4F53';color:#0a6bb8
